--- a/malai/Cargo.toml
+++ b/malai/Cargo.toml
@@ -31,6 +31,7 @@ tokio-stream.workspace = true
 tokio.workspace = true
 tracing-subscriber.workspace = true
 tracing.workspace = true
+tokio-util.workspace = true
 
 [target.'cfg(target_os = "linux")'.dependencies]
 libdbus-sys.workspace = true
