--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,7 @@ hyper = { version = "1", features = ["full"] }
 hyper-util = { version = "0.1.10", features = ["tokio", "server"] }
 iroh = { version = "0.35", features = ["discovery-local-network"] }
 keyring = "4.0.0-rc.1"
-kulfi-utils = { path = "kulfi-utils", version = "0.1.0", features = ["keyring"] }
+kulfi-utils = { path = "kulfi-utils", version = "0.1.0" }
 libdbus-sys = { version = "0.2", features = ["vendored"] }
 mime_guess = "2"
 percent-encoding = "2"
