--- a/.github/workflows/release-malai.yml
+++ b/.github/workflows/release-malai.yml
@@ -26,9 +26,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
       - uses: dtolnay/rust-toolchain@stable
         with:
           targets: ${{ matrix.target }}
@@ -45,6 +42,13 @@ jobs:
 
       - name: print rustc version
         run: rustc --version
+
+      - name: Install aarch64 target
+        if: ${{ matrix.target == 'aarch64-unknown-linux-gnu' }}
+        run: |
+          sudo apt update
+          sudo apt install gcc-aarch64-linux-gnu
+          rustup target add aarch64-unknown-linux-gnu
 
       - name: Cargo build for ${{ matrix.target }}
         run: cargo build --release --bin malai --target ${{ matrix.target }}
